projects/compiler/test/typechecker/typeidentifier/error_unknown_type.out
Error at %FILE_NAME%:1:8
Unknown type 'Foobar'
  |  var _: Foobar
            ^
No type with that name is visible in current scope
